--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,6 +5,11 @@ output:
     keep_md: true
 ---
 
+---
+title: "Peer Graded Assignment - Course Project 1"
+output: html_document
+---
+
 ## Loading and preprocessing the data
 
 As a part of preprocessing I converted date from character to Date Format
@@ -104,6 +109,7 @@ return(dataFilledMissing)
 
 
 dataNAFilled = ReturnMissingFilledDataSet(DT)
+dataNAFilled$date = as.Date(dataNAFilled$date, origin="1970-01-01")
 ```
 
 
@@ -111,6 +117,7 @@ Histogram of number of steps taken each day
 
 ```{r, echo=TRUE}
 summarisedDT <- dataNAFilled %>% group_by(date) %>% summarise(Tot.Steps = sum(steps))
+summarisedDT$date <- as.Date(as.character(summarisedDT$date))
 plot(summarisedDT$date,summarisedDT$Tot.Steps,type = "h",xlab = "Date",ylab = "No
 Of Steps",main = "No of Steps Each Day")
 ```
